Choose Your Destination section is complet

--- a/index.html
+++ b/index.html
@@ -87,6 +87,32 @@
         </div>
       </div>
     </section>
+    <section id="destination_contenr">
+      <div class="destnestion_areya">
+        <div class="destnison_text_areya">
+          <h2 class="destnion_text_titel">Choose Your Destination</h2>
+          <p class="destnison_descoption">These destination names aim to highlight the diverse and unique attractions
+            that Bangladesh has to offer. Feel free to
+            customize or combine them based on the specific themes or features of your tours in Bangladesh.</p>
+        </div>
+        <div class="destnison_img_contner">
+          <div class="img_boxesh1">
+            <div class="destnison_img_box1"> <img src="image/Rectangle 5.png" alt=""></div>
+            <div class="destnison_img_box2"><img src="image/Rectangle 8.png" alt=""></div>
+          </div>
+
+          <div class="destnison_box2">
+            <div class="destnison_img_box3"><img src="image/Rectangle 6.png" alt=""></div>
+            <div class="destnison_img_box4"><img src="image/Rectangle 7.png" alt=""></div>
+            <div class="destnison_img_box5"><img src="image/Rectangle 9.png" alt=""></div>
+          </div>
+          <div class="destinon_boxed3">
+            <div class="destnison_img_box6"><img src="image/Rectangle 11.png" alt=""></div>
+            <div class="destnison_img_box7"><img src="image/Rectangle 10.png" alt=""></div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
