hotel and service and price section done

--- a/index.html
+++ b/index.html
@@ -113,6 +113,49 @@
         </div>
       </div>
     </section>
+
+    <section id="Hotel_all_service">
+      <div class="hotel_areya">
+        <div class="hotel_section_text">
+
+          <h2 class="hotel_text_titel">Why Choose Us</h2>
+          <p class="hotel_text_descoption">Our tours to TrekTrove are curated with a meticulous attention to
+            detail, offering an exclusive experience you won't
+            find elsewhere. With our extensive knowledge of the region, we ensure that every aspect of your journey is
+            enriched with
+            cultural insights and hidden gems.</p>
+        </div>
+        <div class="Hotel_and_serbice">
+          <div class="hotel_section">
+            <img src="image/icon/hotel 1.png" alt="">
+            <h2 class="hotel_section_titel">Handpicked Hotels</h2>
+            <p class="hotel_section_descoption">We are committed to preserving the beauty and integrity of TrekTrove.
+              Our tours adhere to sustainable and
+              responsible tourism practices, contributing to the local communities and ecosystems, ensuring that future
+              generations
+              can also enjoy the wonders of this incredible destination.</p>
+          </div>
+          <div class="service_section">
+            <img src="image/icon/map 1.png" alt="">
+            <h2 class="service_section_titel">World Class Service</h2>
+            <p class="service_descoption">Our team is here for you, from the moment you express interest in our tours to
+              the completion of your journey. Expect
+              personalized attention, prompt responses, and assistance whenever you need it, ensuring a smooth and
+              enjoyable travel
+              experience.</p>
+          </div>
+        </div>
+        <div class="price_section">
+          <img src="image/icon/price-tag 1.png" alt="">
+          <h2 class="price_titel">Best Price Guarantee</h2>
+          <p class="price_descoption">Unearth the richness of TrekTrove with our exclusive Cultural Explorer Package.
+            Immerse yourself in the vibrant
+            tapestry of this unique destination, where ancient traditions meet modern allure. This curated package is
+            designed for
+            those seeking an authentic and enriching experience.</p>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
