newslatter section is complet

--- a/index.html
+++ b/index.html
@@ -156,6 +156,33 @@
         </div>
       </div>
     </section>
+    <section>
+
+    </section>
+
+    <section>
+
+    </section>
+
+    <section id="input_section_areya">
+      <div class="input_section">
+        <div class="input_text_areya">
+          <h2 class="input_titel">Newsletter</h2>
+          <p class="input_descoption">Get your daily dose of travel news & tips. Sign up today!</p>
+          <hr>
+          <input type="text" placeholder="Enter your name">
+          <input type="email" name="" id="" placeholder="Enter your email">
+          <button class="submite_btn">Subscribe</button>
+        </div>
+        <div class="input_img_areya">
+          <img src="image/Rectangle 8 (1).png" alt="">
+          <div class="save_travel">
+            <p class="save_trovel_titel">Travel.com</p>
+            <h2 class="save_travel_descoption"> Save up to 70%</h2>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
