footer section complet

--- a/index.html
+++ b/index.html
@@ -185,7 +185,25 @@
     </section>
   </main>
   <footer>
-
+    <div class="footer_contner_section">
+      <div class="footer_section">
+        <img src="image/Group 40071 (2).png" alt="">
+        <h2 class="footer_titel"> Trek<span class="footer_name_color">Trove</span></h2>
+      </div>
+      <div class="footer_descoption_top">
+        <p class="footer_descoption">Join our community of adventure enthusiasts! Subscribe to TrekTrove for exclusive
+          travel insights, exciting stories, and
+          insider tips delivered straight to your inbox. </p>
+      </div>
+      <div class="footer_icon_areya">
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-github"></i>
+      </div>
+      <hr class="hr_color">
+      <p class="footer_descoption_areya">2017, All Rights Reserved.</p>
+    </div>
   </footer>
 </body>
 
