bonus mark section 1 done

--- a/index.html
+++ b/index.html
@@ -160,7 +160,27 @@
 
     </section>
 
-    <section>
+    <section id="sample_place_contner">
+      <div class="sample_place_areya">
+        <div class="sample_place_text_areya">
+          <h2 class="sample_plece_titel">
+            A Simple Perfect Place To Get Lost
+          </h2>
+          <p class="sample_place_descoption">If you are looking for information on travel destinations in Bangladesh,
+            here are a few notable places to consider
+            exploring..</p>
+          <ul>
+            <li>A UNESCO World Heritage Site, the Sundarbans is the largest mangrove forest in the world and home to the
+              Bengal tiger.</li>
+            <li>Known for having one of the longest beaches in the world, Cox's Bazar is a popular seaside destination.
+            </li>
+          </ul>
+          <button class="see_more_btn">See More</button>
+        </div>
+        <div class="sample_palce_image_areya">
+          <img src="image/Group 40089.png" alt="">
+        </div>
+      </div>
 
     </section>
 
