aneder bonus section is complet

--- a/index.html
+++ b/index.html
@@ -156,10 +156,45 @@
         </div>
       </div>
     </section>
+    <section id="bazar_section_contner">
+      <div class="cox_bazar_contner">
+        <div class="cox_bazar_text-areya">
+          <h2 class="cox_bazar_titel">Discovering Paradise: The Beauty of Cox's Bazar"</h2>
+          <p class="cox_bazar_descoption">Embark on a visual journey to the enchanting shores of Cox's Bazar, where the
+            world's longest uninterrupted sandy beach
+            meets the azure waters of the Bay of Bengal.</p>
+          <ul>
+            <li>Beyond the sandy shores, the Bay of Bengal provides a playground for water enthusiasts. </li>
+            <li>Experience the harmonious blend of coastal living and indigenous traditions that shape the identity of
+              Cox's Bazar.
+            </li>
+            <li>As the day comes to a close, witness spectacular sunsets over the Bay of Bengal.</li>
+          </ul>
+          <button class="see_more_btn">See more</button>
+        </div>
+        <div class="cox_bazar_imag_section">
+          <div class="bazrar_head_section_img">
+            <div class="cox_bazar_img">
+              <img src="image/cox-bazr/bazar1.avif" alt="">
+            </div>
+            <div class="cox_bazar_img">
+              <img src="image/cox-bazr/bozar2.avif" alt="">
+            </div>
+          </div>
+          <div class="bazrar_head_section_img">
+            <div class="cox_bazar_img">
+              <img src="image/cox-bazr/bazzar5.jpg" alt="">
+            </div>
+            <div class="cox_bazar_img">
+              <img src="image/cox-bazr/bazzar6.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section>
 
     </section>
-
     <section id="sample_place_contner">
       <div class="sample_place_areya">
         <div class="sample_place_text_areya">
