desl and descount areya 50% done

--- a/index.html
+++ b/index.html
@@ -192,7 +192,26 @@
         </div>
       </div>
     </section>
-    <section>
+
+    <section id="dels_and_descoun_contner">
+      <div class="dels_and_descount">
+        <div class="dels_text_areya">
+          <h2 class="dels_and_descount_titel">Deals & Discounts</h2>
+          <p class="desls_and_descount_descoption">Welcome to a world of savings! Our 'Deals & Discounts' section is
+            your
+            go-to destination for discovering exclusive
+            offers, promotions, and money-saving opportunities.</p>
+        </div>
+        <div class="dels_and_descount_img">
+
+        </div>
+        <div class="dels_ande_descount_img_section">
+
+        </div>
+        <div class="desl_nad_descount_section_img">
+
+        </div>
+      </div>
 
     </section>
     <section id="sample_place_contner">
