all section is complet

--- a/index.html
+++ b/index.html
@@ -37,10 +37,8 @@
       <div class="hero_areya_styel">
         <div class="hero_text_all_areya">
           <h2 class="hero_titel">Explore Your Travel</h2>
-          <p class="heroaaa_descoption">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing.
-            In
-            et odio enim ac quis sapien urna eu
-            phasellus.</p>
+          <p class="heroaaa_descoption">Embark on a journey of self-discovery and unparalleled exploration with
+            TrekTrove.</p>
         </div>
         <div class="hero_section_input">
           <select class="box_input" name="" id="">
@@ -97,18 +95,32 @@
         </div>
         <div class="destnison_img_contner">
           <div class="img_boxesh1">
-            <div class="destnison_img_box1"> <img src="image/Rectangle 5.png" alt=""></div>
-            <div class="destnison_img_box2"><img src="image/Rectangle 8.png" alt=""></div>
+            <div class="destnison_img_box1"> <img src="image/Rectangle 5.png" alt="">
+              <h2 class="img_destnison_titel">Maldives</h2>
+            </div>
+            <div class="destnison_img_box2"><img src="image/Rectangle 8.png" alt="">
+              <h2 class="img_destnison_box2_name">Indonesia</h2>
+            </div>
           </div>
 
           <div class="destnison_box2">
-            <div class="destnison_img_box3"><img src="image/Rectangle 6.png" alt=""></div>
-            <div class="destnison_img_box4"><img src="image/Rectangle 7.png" alt=""></div>
-            <div class="destnison_img_box5"><img src="image/Rectangle 9.png" alt=""></div>
+            <div class="destnison_img_box3"><img src="image/Rectangle 6.png" alt="">
+              <h2 class="destnioson_box3_name">Srilanka</h2>
+            </div>
+            <div class="destnison_img_box4"><img src="image/Rectangle 7.png" alt="">
+              <h2 class="destnison_box4_name">North America</h2>
+            </div>
+            <div class="destnison_img_box5"><img src="image/Rectangle 9.png" alt="">
+              <h2 class="destnison_box5_name">Kashmir</h2>
+            </div>
           </div>
           <div class="destinon_boxed3">
-            <div class="destnison_img_box6"><img src="image/Rectangle 11.png" alt=""></div>
-            <div class="destnison_img_box7"><img src="image/Rectangle 10.png" alt=""></div>
+            <div class="destnison_img_box6"><img src="image/Rectangle 11.png" alt="">
+              <h2 class="destnison_box6_name">Bangladesh</h2>
+            </div>
+            <div class="destnison_img_box7"><img src="image/Rectangle 10.png" alt="">
+              <h2 class="destnison_box7_name">Bandarban</h2>
+            </div>
           </div>
         </div>
       </div>
@@ -203,15 +215,63 @@
             offers, promotions, and money-saving opportunities.</p>
         </div>
         <div class="dels_and_descount_img">
-
+          <div class="dels_and_descount_img_text_areya">
+            <div class="dels_nad_descount_img_titel">
+              <p class="descount_titels"><img src="image/icon/Frame.svg" alt=""> 7 Day / 6 Night</p>
+              <p class="descount_titels"><img src="image/icon/Fram2.png" alt=""> Max : 10</p>
+              <p class="descount_titels"><img src="image/icon/fram3.svg" alt=""><img src="image/icon/Frame (3).png"
+                  alt=""> Malaysia</p>
+            </div>
+            <div class="dels_nad_descount_all_img_descoption">
+              <h2 class="dels_descount_tile">Tour To Satorini</h2>
+              <p class="dels_turis_descoption">Amet consectetur. Vulputate commodo felis
+                molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
+                adipiscing.</p>
+              <p class="desl_and_descount_price">Price: $1300-$1500</p>
+              <button class="book_btn">Book Now</button>
+            </div>
+          </div>
         </div>
         <div class="dels_ande_descount_img_section">
-
+          <div class="descount_all_sectioned">
+            <div class="descount_text_sectioned">
+              <p class="descount_titels"><img src="image/icon/Frame.svg" alt=""> 7 Day / 6 Night</p>
+              <p class="descount_titels"><img src="image/icon/Fram2.png" alt=""> Max : 10</p>
+              <p class="descount_titels"><img src="image/icon/fram3.svg" alt=""><img src="image/icon/Frame (3).png"
+                  alt=""> Malaysia
+              </p>
+            </div>
+            <div class="descount_andher_section">
+              <h2 class="dels_descount_tile">Tour To Satorini</h2>
+              <p class="dels_turis_descoption">Amet consectetur. Vulputate commodo felis
+                molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
+                adipiscing.</p>
+              <p class="desl_and_descount_price">Price: $1300-$1500</p>
+              <button class="book_btn">Book Now</button>
+            </div>
+          </div>
         </div>
         <div class="desl_nad_descount_section_img">
+          <div class="desl_nad_descount_headear">
+            <div class="desl_descount_headear_text_sectiom">
+              <p class="descount_titels"><img src="image/icon/Frame.svg" alt=""> 7 Day / 6 Night</p>
+              <p class="descount_titels"><img src="image/icon/Fram2.png" alt=""> Max : 10</p>
+              <p class="descount_titels"><img src="image/icon/fram3.svg" alt=""><img src="image/icon/Frame (3).png"
+                  alt=""> Malaysia
+              </p>
 
+            </div>
+
+            <div class="desl_dowen_section_texes">
+              <h2 class="dels_descount_tile">Tour To Satorini</h2>
+              <p class="dels_turis_descoption">Amet consectetur. Vulputate commodo felis
+                molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
+                adipiscing.</p>
+              <p class="desl_and_descount_price">Price: $1300-$1500</p>
+              <button class="book_btn">Book Now</button>
+            </div>
+          </div>
         </div>
-      </div>
 
     </section>
     <section id="sample_place_contner">
