some chinenge this project

--- a/index.html
+++ b/index.html
@@ -272,7 +272,9 @@
             </div>
           </div>
         </div>
-
+        <div class="button_last_section">
+          <button class="book_btn">See All Packages</button>
+        </div>
     </section>
     <section id="sample_place_contner">
       <div class="sample_place_areya">
